transfer c pointer to c++ list

--- a/config/default.config
+++ b/config/default.config
@@ -11,12 +11,12 @@ server {
 	client_body_limit 256 
 
 	location /board {
-		allow_methods GET DELETE
+		allow_methods GET
 		root ./www/html/contents
 	}
 
-	location /board/post {
-		allow_methods POST
+	location /board/content {
+		allow_methods GET POST DELETE
 		root ./www/html/contents
 	}
 
