--- a/config/default.config
+++ b/config/default.config
@@ -12,7 +12,7 @@ server {
 
 	location /board {
 		allow_methods GET
-		root ./www/html/contents
+		root ./www/html
 	}
 
 	location /board/content {
