--- a/config/default.config
+++ b/config/default.config
@@ -3,7 +3,6 @@ server {
 	listen 0.0.0.0:4242
 
 	root ./www/html
-	index index.html
 
 	allow_methods GET
 
@@ -40,7 +39,7 @@ server {
 
 	location /board {
 		allow_methods GET DELETE
-		root ./www/html/contents
+		root ./www/html
 	}
 
 	location /board/post {
