--- a/config/default.config
+++ b/config/default.config
@@ -3,10 +3,11 @@ server {
 	listen 0.0.0.0:4242
 
 	root ./www/html
+	index iinnddeexx.html index.html
 
 	allow_methods GET
 
-	autoindex off
+	autoindex on
 	client_body_limit 256 
 
 	location /board {
