로컬에서 컨플릭 해결중

--- a/config/default.config
+++ b/config/default.config
@@ -36,6 +36,8 @@ server {
 
 	autoindex off
 	client_body_limit 256 
+	recv_timeout 6;
+	send_timeout 6;
 
 	location /board {
 		allow_methods GET DELETE
