--- a/config/default.config
+++ b/config/default.config
@@ -1,61 +1,61 @@
 server {
-	server_name webserv
-	listen 0.0.0.0:4242
+	server_name webserv;
+	listen 0.0.0.0:4242;
 
-	root ./www/html
+	root ./www/html;
 
-	allow_methods GET
+	allow_methods GET;
 
-	autoindex on
-	client_body_limit 256 
+	autoindex on;
+	client_body_limit 256;
 
 	location /board {
-		allow_methods GET
-		root ./www/html
+		allow_methods GET;
+		root ./www/html;
 	}
 
 	location /board/content {
-		allow_methods GET POST DELETE
-		root ./www/html/contents
+		allow_methods GET POST DELETE;
+		root ./www/html/contents;
 	}
 
 	location /cgi {
-		allow_methods GET
-		cgi_info hello-world ./cgi_tester
+		allow_methods GET;
+		cgi_info hello-world ./cgi_tester;
 	}
 }
 
 server {
-	server_name webserv
-	listen 0.0.0.0:4243
+	server_name webserv;
+	listen 0.0.0.0:4243;
 
-	root ./www/html
-	index index.html
+	root ./www/html;
+	index index.html;
 
-	allow_methods GET
+	allow_methods GET;
 
-	autoindex off
-	client_body_limit 256 
+	autoindex off;
+	client_body_limit 256 ;
 	recv_timeout 6;
 	send_timeout 6;
 
 	location /board {
-		allow_methods GET DELETE
-		root ./www/html
+		allow_methods GET DELETE;
+		root ./www/html;
 	}
 
 	location /board/post {
-		allow_methods POST
-		root ./www/html/contents
+		allow_methods POST;
+		root ./www/html/contents;
 	}
 
 	location /cgi {
-		allow_methods GET
-		cgi_info cgi_tester hello world
+		allow_methods GET;
+		cgi_info cgi_tester hello world;
 	}
 }
 
 server {
-	listen 0.0.0.0:8000
-	return 301 https://profile.intra.42.fr/
+	listen 0.0.0.0:8000;
+	return 301 https://profile.intra.42.fr/;
 }
