--- a/config/tester.config
+++ b/config/tester.config
@@ -14,7 +14,7 @@ server {
 
 	location /directory {
 		allow_methods GET
-		root ./YoupiBanane/
+		root ./YoupiBanane
 		index youpi.bad_extension
 		cgi_info .bla cgi_tester
 	}
