--- a/config/default.config
+++ b/config/default.config
@@ -18,12 +18,14 @@ server {
 		allow_methods GET POST DELETE;
 		root ./www/html/contents;
 	}
-
+	
 	location /cgi {
-		allow_methods GET;
-		cgi_info hello-world ./cgi_tester;
+		allow_methods GET POST;
+		cgi_info php php-fpm;
 	}
 }
+
+localhost:4242/cgi/php
 
 server {
 	server_name webserv;
