--- a/config/default.config
+++ b/config/default.config
@@ -9,6 +9,9 @@ server {
 	autoindex on;
 	client_body_limit 256;
 
+	error_page 404 405 ./www/html/error/error.html;
+	error_page 500 ./www/html/error/error2.html;
+
 	location /board {
 		allow_methods GET;
 		root ./www/html;
