[del] config file regex not use

--- a/config/tester.config
+++ b/config/tester.config
@@ -13,14 +13,9 @@ server {
 	}
 
 	location /directory {
-		allow_methods GET;
+		allow_methods GET POST;
 		root ./YoupiBanane;
 		index youpi.bad_extension;
 		cgi_info .bla cgi_tester;
-	}
-
-	location *.bla {
-		allow_methods POST;
-		cgi_info .bla ./cgi_tester;
 	}
 }
