--- a/config/default.config
+++ b/config/default.config
@@ -29,6 +29,32 @@ server {
 }
 
 server {
+	server_name another_webserv;
+	listen 0.0.0.0:4242;
+
+	root ./www/html;
+
+	allow_methods GET;
+
+	client_body_limit 256;
+
+	location /board {
+		allow_methods GET;
+		root ./www/html;
+	}
+
+	location /board/content {
+		allow_methods GET POST DELETE;
+		root ./www/html/contents;
+	}
+	
+	location /cgi {
+		allow_methods GET POST;
+		cgi_info php php-fpm;
+	}
+}
+
+server {
 	server_name webserv;
 	listen 0.0.0.0:4243;
 
