--- a/config/default.config
+++ b/config/default.config
@@ -7,6 +7,7 @@ server {
 	allow_methods GET;
 
 	autoindex on;
+	index index.html index2.html;
 	client_body_limit 4096;
 
 	error_page 404 405 ./www/html/error/error.html;
