--- a/config/default.config
+++ b/config/default.config
@@ -21,6 +21,8 @@ server {
 	location /board/content {
 		allow_methods GET POST DELETE;
 		root ./www/html/contents;
+		index board.html;
+		cgi_info .php php-cgi;
 	}
 	
 	location /cgi {
