add color in cout

--- a/config/default.config
+++ b/config/default.config
@@ -8,7 +8,7 @@ server {
 
 	autoindex on;
 	index index.html index2.html;
-	client_body_limit 4096;
+	client_body_limit 4096
 
 	error_page 404 405 ./www/html/error/error.html;
 	error_page 500 ./www/html/error/error2.html;
